# Module_9

./: main_bs.py  pyproject.toml
quotes_scraper/quotes_scraper/spiders/: main.py
